<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:theme="@style/Theme.Calculator"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/buttons_list"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingTop="30dp"
        android:paddingRight="25dp"
        android:paddingBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_ac"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:text="@string/ac"
                android:onClick="test"
                android:textColor="?attr/colorSecondaryVariant"
                android:textSize="20sp"
                app:cornerRadius="100dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_plus_minus"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:text="@string/plus_minus"
                android:textColor="?attr/colorSecondaryVariant"
                android:textSize="24sp"
                app:cornerRadius="100dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_percentage"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:text="@string/percentage"
                android:textColor="?attr/colorSecondaryVariant"
                android:textSize="24sp"
                app:cornerRadius="100dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_division"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:text="@string/division"
                android:textColor="?attr/colorSecondary"
                android:textSize="24sp"
                app:cornerRadius="100dp" />
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_seven"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:text="@string/seven"
                android:textColor="?attr/colorAccent"
                android:textSize="20sp"
                app:cornerRadius="100dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_eight"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:text="@string/eight"
                android:textColor="?attr/colorAccent"
                android:textSize="24sp"
                app:cornerRadius="100dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_nine"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:text="@string/nine"
                android:textColor="?attr/colorAccent"
                android:textSize="24sp"
                app:cornerRadius="100dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_multiplication"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:text="@string/multiplication"
                android:textColor="?attr/colorSecondary"
                android:textSize="24sp"
                app:cornerRadius="100dp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_four"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:text="@string/four"
                android:textColor="?attr/colorAccent"
                android:textSize="20sp"
                app:cornerRadius="100dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_five"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:text="@string/five"
                android:textColor="?attr/colorAccent"
                android:textSize="24sp"
                app:cornerRadius="100dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_six"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:text="@string/six"
                android:textColor="?attr/colorAccent"
                android:textSize="24sp"
                app:cornerRadius="100dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_subtraction"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:text="@string/subtraction"
                android:textColor="?attr/colorSecondary"
                android:textSize="24sp"
                app:cornerRadius="100dp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_one"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:text="@string/one"
                android:textColor="?attr/colorAccent"
                android:textSize="20sp"
                app:cornerRadius="100dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_two"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:text="@string/two"
                android:textColor="?attr/colorAccent"
                android:textSize="24sp"
                app:cornerRadius="100dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_three"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:text="@string/three"
                android:textColor="?attr/colorAccent"
                android:textSize="24sp"
                app:cornerRadius="100dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_addition"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:text="@string/addition"
                android:textColor="?attr/colorSecondary"
                android:textSize="24sp"
                app:cornerRadius="100dp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_back"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:text="@string/back"
                android:textColor="?attr/colorAccent"
                android:textSize="20sp"
                app:cornerRadius="100dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_zero"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:text="@string/zero"
                android:textColor="?attr/colorAccent"
                android:textSize="24sp"
                app:cornerRadius="100dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_dot"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:text="@string/dot"
                android:textColor="?attr/colorAccent"
                android:textSize="24sp"
                app:cornerRadius="100dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_equals"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:text="@string/equals"
                android:textColor="?attr/colorSecondary"
                android:textSize="24sp"
                app:cornerRadius="100dp" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>